# seg2coco

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/labels/color/1119/: 65132.json
data/labels/gray/1132/: 118035.json  86000.json
